--- a/css/dengluzhuce.css
+++ b/css/dengluzhuce.css
@@ -246,7 +246,7 @@ body{
     width: 270px;
     height: 36px;
     margin-left: 40px;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 .password{
@@ -254,7 +254,7 @@ body{
     height: 38px;
     float: left;
     margin-left: 40px;
-    margin-top: 10px;
+    margin-top: 20px;
     background: yellow;
 }
 
@@ -295,7 +295,7 @@ body{
     width: 275px;
     height: 36px;
     margin-left: 40px;
-    margin-top: 10px;
+    margin-top: 40px;
     color: #fff;
     background: red;
     line-height: 36px;
@@ -634,6 +634,16 @@ body{
     float: left;
     margin-left: 40px;
     margin-top: 3px;
+}
+
+.inputtext{
+    float: left;
+    color: red;
+    width: 100px;
+    height: 20px;
+    margin-left: 40px;
+    margin-top: 10px;
+    font-size: 13px;
 }
 
 
