完成注册页面

--- a/css/dengluzhuce.css
+++ b/css/dengluzhuce.css
@@ -295,7 +295,7 @@ body{
     width: 275px;
     height: 36px;
     margin-left: 40px;
-    margin-top: 40px;
+    margin-top: 10px;
     color: #fff;
     background: red;
     line-height: 36px;
@@ -352,6 +352,16 @@ body{
 
 .post:hover{
     text-decoration: underline;
+}
+
+.inputtxt{
+    width: 200px;
+    height: 20px;
+    font-size: 13px;
+    float: left;
+    margin-left: 40px;
+    margin-top: 10px;
+    color: red;
 }
 
 /* 邮箱登陆 */
@@ -639,11 +649,12 @@ body{
 .inputtext{
     float: left;
     color: red;
-    width: 100px;
+    width: 200px;
     height: 20px;
     margin-left: 40px;
     margin-top: 10px;
     font-size: 13px;
+    /* background: yellow; */
 }
 
 
