--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,19 @@ body{
 #id{
     width: 100%;
     height: 100%;
+    position: relative;
 }
+
+.leftbox{
+    width: 100px;
+    height: 400px;
+    background: #cccfff;
+    position: fixed;
+    top: 100px;
+    left: 20px;
+    z-index: 9999;
+}
+
 
 .top-nav{
     width: 100%;
@@ -88,6 +100,9 @@ body{
     width: 100%;
     height: 100px;
     background: #fff;
+    position: sticky;
+    top: 0;
+    z-index: 99999;
 }
 
 .logo-center{
